--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 ### Site Settings ###
 title               : Elizabeth Schwartz 
 description         : >-
-                      I might be a corgi!
+                      The Infrastructural Creation of the Internet Archive
 baseurl             : ""   # Change to empty quotes if you are hosting your site at <your-username>.github.io directly,
 #                                             otherwise will be hosted at <your-username>.github.io/{{base_url}}
 repository          : ers6               # Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
@@ -34,7 +34,7 @@ nav_exclude:                                            # The following paths ar
 
 ### Author Info ###
 author:
-  name              : A. P. Corgi
+  name              : Elizabeth Schwartz
   image             : https://dogtime.com/assets/uploads/gallery/pembroke-welsh-corgi-dog-breed-pictures/prance-8.jpg
 #  behance           : your_username
 # dribbble          : your_username
