--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ nav_exclude:                                            # The following paths ar
 ### Author Info ###
 author:
   name              : Elizabeth Schwartz
-  image             : https://dogtime.com/assets/uploads/gallery/pembroke-welsh-corgi-dog-breed-pictures/prance-8.jpg
+  image             : https://pbs.twimg.com/profile_images/717127559134056448/BYGRuZmj_400x400.jpg
 #  behance           : your_username
 # dribbble          : your_username
   email             : username@domain.com
